objects/ReferralManagementEndpoint__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Add_Friend__c</fullName>
        <label>Add Friend</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Get_Users__c</fullName>
        <label>Get Users</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Login_Token__c</fullName>
        <description>The login token for social annex.</description>
        <label>Login Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <label>Site Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Stage__c</fullName>
        <label>Update Stage</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Referral Management Endpoint</label>
</CustomObject>